# DealMate

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .nvmrc  AI_IMPLEMENTATION_COMPLETE.md  AUTH_SETUP_COMPLETE.md  AUTH_SETUP_FINAL.md  BUILD.md  Dockerfile  ENHANCED_FEATURES_SUMMARY.md  FEATURE_SET.md  FINAL_CLEANUP_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  Makefile  NEW_DEVS.md  PRODUCT_FEATURE_SPECIFICATION.md  PYTHON_AI_INTEGRATION.md  README.md  README_SCRIPTS.md  TESTING_GUIDE.md  USAGE_GUIDE.md  act_env.sh  build.sh  build_backend.sh  clean.sh  dev.sh  docker-compose.yml  drop_all_tables.sh  lighthouse-budget.json  lighthouserc.js  nginx.conf  package-lock.json  package.json  podman-build.sh  podman-up.sh  quick_test.sh  railway.toml  run_app.sh  run_auth_tests.sh  (+10 more)
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-00780fc2d50b198d376791c22e2c0a2d9c90324f8eb9298310fa2b0aa2b3079b.json  query-021abc990f26cf0ae214a6a987429ace534d5bcbe53207cc63975badf098b28b.json  query-03672565246875eb94b9401210121a314dc9716a48bd7a3803cc2d22bb10fdc9.json  query-1492d1de4308ca2af18c441fc7736ecf1844bc5ce0b92cb0f9bd3a32cd83e386.json  query-1b2c08741de113c0706fa90f12290cb8fe498b300f58a87a0006a0973bccfa27.json  query-1c999db6c1f2eb2c46e8626f8e92caa4b90ec2266ec813faffd1e5c3fec9b93c.json  query-21a059347bf1ab1a4e763bfd5b4438f5e035a000c27fbc1445c3669fd4165afa.json  query-2bfbcb2975f96a29abfa6ee3d6743e7a93ecd06b766b532311de50d70e7d55f1.json  query-319daaf986db488a0baffa6b9f53d383b74f912234fe04b022a2b0092f561a8d.json  query-38121d4a78d28ae64ed3ff342738c8ade8c03bf6957f091349ab15298ac590c0.json  query-4620ae1aa1207fb71f7202bccc1088e60d77a20979ad0c20e8d566b4ad86eae7.json  query-47b5c7c2470cb9d8806b1c98fbfb7fbd524359690f39ef355980ff5e27b43dc7.json  query-486eac179fb6089cd8e51e05a4482bafbd6c87254f33d7c02c81d1c52827d3b8.json  query-4a869a35809c4e7d34a72b8500890d9e71f9ae837d47da5763343773f66953f4.json  query-52edde21c33eb2c3bd1b3d7fd86459bc273dc639f706381a6ac379590260eeaa.json  query-5930db141451b53dee16e0e502a828b1e1fa2675af1017ce52857f1f7e6035ee.json  query-5ff1b1947e585496b8232d9196d275333c03fc8c1dfbe1b5ce8e60951afbf62e.json  query-64238d5fa563bdf7a3ab21172f8ebd05de6bce2904a3f90c254e7a287353c657.json  query-66f719012e17922185297d97c05aaffe635036fa9461facbadc975b14c255b9e.json  query-6745f425b17bc6d86efdb01c58f8b75e51df5b2fa621e213ecf2a8eaa3c4d645.json  query-6977fd57c2a70e1ad12a7eed7f6fb76b650534cf9aff4f3589c3ca09513ede43.json  query-6cf7b3a3424ce773fce9f615ef6207114bf7b294df997fe6e500185a64008105.json  query-71074cd97b4f1d2a27db2d46c37f2909685ece8ad28f24ae4b680675ab239f50.json  query-73b8580b27684ac43fbe90029c36df2a57311b744cf46f47d2b60e7756f9139b.json  query-75204203acc250b5118f0c70967b48c0d9da8f6f6bc36654085e3b06aeafca62.json  query-7d03f5417915b050d765aee36ce41d366c4e3e3032ba720dd5eb744a0794729f.json  query-7ed542a996b48e3781a6b067db01bd10adf41d77c43a21bdc00d3bd060886524.json  query-7ee2990eeed46672384bd3c0dc28ad421b20188be0259c5c407cebe106af8a4d.json  query-823c936ee2bb7067a536f9e3dbf2c3ee6e7584cb483dd885353766b00749ff4d.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8b60b1aca1f021f04090c54b73602398ba2d02700e918724f5789ad37dcbcd0c.json  query-9dc823145c55f40c456b90850713a0378e98f4e9dda7aa07da71cd4dd21719c4.json  query-a0c80a105d270274d72a3dfb29e1548639cb7b084e25a6c9c6bffb4635213120.json  query-a40b04e4a55530dceedb975cf5567390fa1b41da8ed3393b45d7cfb5f473287a.json  query-a8ab70698a619874b40982d6c5d78c927221f912c99ea1f0fa7265bb7353e1e9.json  query-ab2b690ad15a8f6b893981309a41b45c301d9660498b0649b4bebb3049c328c1.json  query-ab88f624202e0de5147deb643ce716dbf25a1fdd22ed9ea2dca430aba84ef267.json  query-aec76fe04ec0b1285f689ed256c10587994af5b2cc30b70297522c4c8ed6135b.json  query-b88d9b156fb2d35e554d007b00216860e4f078ab7820efefeface9ec9436277d.json  query-b8fc2ab628aab1a023909a9bc7d31ee16d66f61dceef0d212506406f83cef8a6.json  (+8 more)
backend/ai-service/: .env.example  Dockerfile  README.md  config.py  kafka_producer.py  main.py  models.py  price_comparison.py  requirements.txt  run_tests.sh  services.py  stacksmart.py  start.sh  test_gemini.py  test_service.py
backend/auth-service/: Dockerfile  index.js  package.json  schema.sql  test-env.js
backend/migrations/: 20240521120000_initial_setup.up.sql  20240624135000_create_settings_table.up.sql  20240624150000_create_partnerships_table.up.sql  (+11 more)
shared/: Cargo.toml  constants.ts  types.ts
(+309 files in other folders)
