[package]
name = "dealmate-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coupon_aggregator"
path = "src/bin/coupon_aggregator.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.7.5", features = ["macros", "http1", "http2"] }
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "migrate", "bigdecimal", "time"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.2", features =["cors", "trace", "compression-gzip", "set-header"]}
url = "2.5.0"
bigdecimal = { version = "0.3.1", features = ["serde"] }
time = { version = "0.3.41", features = ["serde"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9.2"
base64 = "0.22"
once_cell = "1.19"
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1.0"
hyper-util = { version = "0.1.1", features = ["full"] }

# Apache Kafka integration
rdkafka = { version = "0.36", features = ["cmake-build", "libz-static"] }
kafka = "0.10"
avro-rs = "0.13"
schema_registry_converter = "4.0"

[dev-dependencies]
reqwest = "0.12"
httpc-test = "0.1.9"
tower = { version = "0.4", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
