[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"], default-features = false }
time = { version = "0.3.41", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
